Rapid Prd/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Is_this_a_Retriever_ISO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this a Retriever ISO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landlord_Agent_Name__c</fullName>
        <label>Landlord/Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord_Agent_Phone__c</fullName>
        <label>Landlord/Agent Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_BD_Call_Activity__c</fullName>
        <label>Last BD Call Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_BD_Owner_Call_Activity__c</fullName>
        <label>Last BD Owner Call Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Call_Activity__c</fullName>
        <label>Last Call Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Closing__c</fullName>
        <label>Last Closing</label>
        <summarizedField>Opportunity.Funded_by_WC__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Created_Opportunity__c</fullName>
        <label>Last Created Opportunity</label>
        <summarizedField>Opportunity.CreatedDate</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Five9_Disposition__c</fullName>
        <label>Last Five9 Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Renewal_Date__c</fullName>
        <label>Last Renewal Date</label>
        <summarizedField>Opportunity.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Renewal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Latest_Opp_Create_Date__c</fullName>
        <description>Stores the create date of the latest opportunity</description>
        <label>Latest Opp Create Date</label>
        <summarizedField>Opportunity.Created_DateTime__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <label>Lead Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_1_Address__c</fullName>
        <label>Location 5 Address:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_1_DBA_NAME__c</fullName>
        <label>Location 5 DBA NAME:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_1_Fax_Number__c</fullName>
        <label>Location 5 Fax Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_1_Landlord_Contact_Name__c</fullName>
        <label>Location 5 Landlord Contact Name:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_1_Landlord_Phone_Number__c</fullName>
        <label>Location 5 Landlord Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_1_Phone_Number__c</fullName>
        <label>Location 5 Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_2_Address__c</fullName>
        <label>Location 2 Address:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_2_DBA_NAME__c</fullName>
        <label>Location 2 DBA NAME:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_2_Fax_Number__c</fullName>
        <label>Location 2 Fax Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_2_Landlord_Contact_Name__c</fullName>
        <label>Location 2 Landlord Contact Name:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_2_Landlord_Phone_Number__c</fullName>
        <label>Location 2 Landlord Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_2_Phone_Number__c</fullName>
        <label>Location 2 Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_2_Time_Remaining_On_The_Lease__c</fullName>
        <label>Location 2: Time Remaining On The Lease</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - 6 months</fullName>
                </value>
                <value>
                    <fullName>7 - 11 months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 years +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_3_Address__c</fullName>
        <label>Location 3 Address:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_3_DBA_NAME__c</fullName>
        <label>Location 3 DBA NAME:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_3_Fax_Number__c</fullName>
        <label>Location 3 Fax Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_3_Landlord_Contact_Name__c</fullName>
        <label>Location 3 Landlord Contact Name:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_3_Landlord_Phone_Number__c</fullName>
        <label>Location 3 Landlord Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_3_Phone_Number__c</fullName>
        <label>Location 3 Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_3_Time_Remaining_On_The_Lease__c</fullName>
        <label>Location 3: Time Remaining On The Lease</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - 6 months</fullName>
                </value>
                <value>
                    <fullName>7 - 11 months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 years +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_4_Time_Remaining_On_The_Lease__c</fullName>
        <label>Location 4: Time Remaining On The Lease</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - 6 months</fullName>
                </value>
                <value>
                    <fullName>7 - 11 months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 years +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field Creation Incident #36049 and map to Contact &quot;Mail Opt Out&quot; on conversion</description>
        <label>Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_For_Statements_etc__c</fullName>
        <description>Added per Earl and Karl.  This will be used for mailing purposed only and could be different for the actual retail location.</description>
        <label>Mailing Address (For Statements etc.)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Materials_Sent__c</fullName>
        <label>Marketing Materials Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Max_Advance_Paid_Off__c</fullName>
        <label>Max Advance Paid Off</label>
        <summarizedField>Opportunity.Advance_Payoff_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Merchant_s_Processing_Productivity__c</fullName>
        <inlineHelpText>Enter the number of new merchants per month.</inlineHelpText>
        <label>Merchant&apos;s Processing Productivity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_Remaining_On_Site_Lease_Mortgage__c</fullName>
        <label>Months Remaining On Site Lease/Mortgage</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_with_Current_Processor__c</fullName>
        <label>Months with Current Processor</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Funded_Renewal_Date__c</fullName>
        <label>Most Recent Funded Renewal Date</label>
        <summarizedField>Opportunity.Time_For_Renewal_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Opp_Not_Processed__c</fullName>
        <description>In rescinded or Unqualified status</description>
        <label>Most Recent Opp Not Processed</label>
        <summarizedField>Opportunity.Time_For_Renewal_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Underwriting_Approval__c</field>
            <operation>equals</operation>
            <value>Approved, Approved by Credit Committee, Approved by Credit Committee with conditions, Approved - Pending Management Review, Auto Approved, Auto Declined, Declined, Declined by Credit Committee, Declined - Pending Management Review, Scheduled for credit co</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Renewal_Date__c</fullName>
        <label>Most Recent Renewal Date</label>
        <summarizedField>Opportunity.Time_For_Renewal_Date__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_Claw_back_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Claw-back Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Partner Accounts</description>
        <label>No Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Reps__c</fullName>
        <description>Required on section &quot;Know your Partner&quot; : Incident #36085</description>
        <label>No. of Reps</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_days_from_last_renewal__c</fullName>
        <formula>(Last_Renewal_Date__c - Opportunity__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of days from last renewal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Funded_Referrals__c</fullName>
        <label>Number of Funded Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Fundings__c</fullName>
        <formula>Campaign__r.NumberofFundings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Fundings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <label>Number of Locations</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Merchants_in_your_Books__c</fullName>
        <label>Number of Merchants in your Books</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Opportunities__c</fullName>
        <label>Number of Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Renewals__c</fullName>
        <description>The number of Renewals associated with this Account.</description>
        <label>Number of Renewals</label>
        <summaryFilterItems>
            <field>Opportunity.Renewal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Terminals_at_Location__c</fullName>
        <label>Number of Terminals at Location?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Site_Bus_Dev_Visit__c</fullName>
        <label>On Site Bus. Dev. Visit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>On_Site_Training__c</fullName>
        <label>RA On Site Sales Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Language__c</fullName>
        <label>Other Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_services_offered__c</fullName>
        <label>What other services do they offer?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Commissions__c</fullName>
        <description>override commissions</description>
        <label>Override Commissions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owned_Business_Since__c</fullName>
        <label>Owned Business Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPT_Partner_Presentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPT Partner Presentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paper_they_concentrate_on__c</fullName>
        <label>Paper they concentrate on?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Account_Override__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Parent Account Override</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PartnerForce_Training_Complete__c</fullName>
        <label>PartnerForce Training Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Bank_Wiring_Instructions__c</fullName>
        <label>Partner Bank Wiring Instructions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Campaign_Team__c</fullName>
        <formula>Campaign__r.Partner_Campaign_Team__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Campaign Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Channel__c</fullName>
        <label>Partner Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Based Lending</fullName>
                </value>
                <value>
                    <fullName>Credit Card Processors</fullName>
                </value>
                <value>
                    <fullName>Equipment Leasing</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Strategic Partnership</fullName>
                </value>
                <value>
                    <fullName>Financial Institutions Group</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Tier__c</fullName>
        <label>Partner Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Partner_Tier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Training_Complete__c</fullName>
        <label>Partner Training Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <description>Task 10871</description>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CUSO</fullName>
                </value>
                <value>
                    <fullName>Referral Partner</fullName>
                </value>
                <value>
                    <fullName>Pricing Partner w/ AE Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Vetted__c</fullName>
        <label>Partner Vetted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Vetting_Status__c</fullName>
        <label>Partner Vetting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Escalated / Needs Further Review</fullName>
                </value>
                <value>
                    <fullName>Approved post further review by Mgmt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partnerforce_Tutorial_Sent__c</fullName>
        <label>Partnerforce.com Tutorial Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Percent_Paid_Off__c</fullName>
        <description>percent paid off for last renewal</description>
        <label>Percent Paid Off</label>
        <summarizedField>Opportunity.Percent_Paid_Off__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Renewal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <label>Phone Ext</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Present_Management_Since__c</fullName>
        <label>Present Management Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Cash_Advance_Experience__c</fullName>
        <inlineHelpText>Has the potential partner sold cash advances before?</inlineHelpText>
        <label>Previous Cash Advance Experience?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_on_New_Deals__c</fullName>
        <label>Pricing on New Deals</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_on_Renewals__c</fullName>
        <label>Pricing on Renewals</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrimaryBankName__c</fullName>
        <label>Primary Bank Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purged_Account_Name__c</fullName>
        <label>Purged Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purged_DBA_Name__c</fullName>
        <label>Purged DBA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purged_Legal_Name__c</fullName>
        <label>Purged Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QL_Mortgage_Product_Type__c</fullName>
        <label>QL Mortgage Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conventional</fullName>
                </value>
                <value>
                    <fullName>FHA</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>Jumbo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QL_Mortgage_Status__c</fullName>
        <label>QL Mortgage Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Approved</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Never Applied/Not Interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QL_Mortgage_Type__c</fullName>
        <label>QL Mortgage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Refinance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RA_Relationship__c</fullName>
        <inlineHelpText>Is the Potential Partner terminating its relationship with its cash advance provider or are they simply adding another cash provider to their product offering?</inlineHelpText>
        <label>RA Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Ending Relationship With Currnet Provider</fullName>
                </value>
                <value>
                    <fullName>Partner Adding RA as Additional Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RC_Lead_Type__c</fullName>
        <label>RC Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RARCIBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Flag__c</fullName>
        <formula>IF(  (TODAY()- Max_Advance_Paid_Off__c)&lt;=15,IMAGE(&quot;/img/samples/stars_500.gif&quot;, &quot;rating&quot;),if( (TODAY()- Max_Advance_Paid_Off__c)&lt;=30,IMAGE(&quot;/img/samples/stars_400.gif&quot;, &quot;rating&quot;), if( (TODAY()- Max_Advance_Paid_Off__c)&lt;=60,IMAGE(&quot;/img/samples/stars_300.gif&quot;, &quot;rating&quot;),if( (TODAY()- Max_Advance_Paid_Off__c)&lt;=90,IMAGE(&quot;/img/samples/stars_200.gif&quot;, &quot;rating&quot;),if( (TODAY()- Max_Advance_Paid_Off__c)&lt;=150,IMAGE(&quot;/img/samples/stars_100.gif&quot;, &quot;rating&quot;),IMAGE(&quot;/img/samples/stars_000.gif&quot;, &quot;rating&quot;)))) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roll_up_Approved__c</fullName>
        <label>Roll up Approved</label>
        <summaryFilterItems>
            <field>Opportunity.Renewal__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Approved_Flag__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Additipnal field requested for during Sprint 46 release.</description>
        <label>Sales Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Follow_Up__c</fullName>
        <label>Scheduled Follow Up</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signed_Contract_Recieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed Contract Recieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specify_Contract_Type_for_Other__c</fullName>
        <label>Specify Contract Type (for Other)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Fund_Set_Up__c</fullName>
        <label>Split Fund Set-Up</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH Option</fullName>
                </value>
                <value>
                    <fullName>Alpha Card</fullName>
                </value>
                <value>
                    <fullName>Global Payments</fullName>
                </value>
                <value>
                    <fullName>GPS - Rocky Mountain</fullName>
                </value>
                <value>
                    <fullName>Integrity</fullName>
                </value>
                <value>
                    <fullName>NOVA</fullName>
                </value>
                <value>
                    <fullName>PowerPay</fullName>
                </value>
                <value>
                    <fullName>RapidAdvance Chooses</fullName>
                </value>
                <value>
                    <fullName>University Bank</fullName>
                </value>
                <value>
                    <fullName>RBSLynk</fullName>
                </value>
                <value>
                    <fullName>TSYS</fullName>
                </value>
                <value>
                    <fullName>iPayment</fullName>
                </value>
                <value>
                    <fullName>EVO</fullName>
                </value>
                <value>
                    <fullName>Humboldt</fullName>
                </value>
                <value>
                    <fullName>Cynergy</fullName>
                </value>
                <value>
                    <fullName>ONEPAY</fullName>
                </value>
                <value>
                    <fullName>Merrick</fullName>
                </value>
                <value>
                    <fullName>EPR</fullName>
                </value>
                <value>
                    <fullName>PayProTec</fullName>
                </value>
                <value>
                    <fullName>Nationwide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Starter_and_Loan_Amendment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Starter and Loan Amendment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Account status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubIndustry__c</fullName>
        <description>SubIndustry</description>
        <label>SubIndustry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Data</fullName>
                </value>
                <value>
                    <fullName>iPayments</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>NOVA</fullName>
                </value>
                <value>
                    <fullName>NPC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TCPA_Disclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TCPA Disclosure?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_Years__c</fullName>
        <label>Term (Years)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>